pasta de imagens renomeada

--- a/lab-5/cover.tex
+++ b/lab-5/cover.tex
@@ -1,11 +1,11 @@
 \thispagestyle{empty} % Remove page number from first page
 
 \begin{figure}[t]
-    \includegraphics[width=3cm]{imagens/logo-puc-minas.png}
+    \includegraphics[width=3cm]{images/logo-puc-minas.png}
     \hspace{0.02\textwidth}
     \vline%
     \hspace{0.04\textwidth}
-    \includegraphics[width=3cm]{imagens/logo-icei.jpeg}
+    \includegraphics[width=3cm]{images/logo-icei.jpeg}
 \end{figure}
 
 \hrulefill%
